[gd_scene load_steps=21 format=3 uid="uid://bvdcl15vsqy0v"]

[ext_resource type="Script" path="res://Scripts/UIManager.gd" id="1_aajpp"]
[ext_resource type="Texture2D" uid="uid://j5bqpsh1t2qt" path="res://Art/Health.png" id="2_ajn7e"]
[ext_resource type="Texture2D" uid="uid://6kiya1n6rgrh" path="res://Art/PlayerFrame.png" id="2_ie8wj"]
[ext_resource type="Texture2D" uid="uid://dylyf6mfg78dr" path="res://Art/DefaultSilhoutte.png" id="3_dwg7d"]
[ext_resource type="Texture2D" uid="uid://bl3berkqrbv5y" path="res://Art/DoubleJumpSilhoutte.png" id="4_5uqyk"]
[ext_resource type="Texture2D" uid="uid://dphmqqevangxu" path="res://Art/HealthOverlay.png" id="4_pvg0f"]
[ext_resource type="Texture2D" uid="uid://rcww6b5hkcyw" path="res://Art/GravityFlipSilhouette.png" id="5_egrq5"]
[ext_resource type="Texture2D" uid="uid://cccp47o04jf0n" path="res://Art/LinearMotionSilhouette.png" id="6_2e8di"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0jo67"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dwg7d")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_5uqyk")
}],
"loop": true,
"name": &"doublejump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_egrq5")
}],
"loop": true,
"name": &"gravityflip",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_2e8di")
}],
"loop": true,
"name": &"linearmotion",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_veqy4"]
font_size = 40
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mp2y6"]
font_size = 40
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_voav2"]
offsets = PackedFloat32Array(0, 0.512987, 1)
colors = PackedColorArray(0, 0.72549, 0.988235, 1, 0, 0.580392, 0.984314, 1, 0, 0.72549, 0.988235, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_800ft"]
gradient = SubResource("Gradient_voav2")
fill_from = Vector2(0, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="LabelSettings" id="LabelSettings_6lrfc"]
font_size = 24
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fw5wo"]
font_size = 69
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_loj3b"]
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_h57yl"]
Button/font_sizes/font_size = 69

[sub_resource type="Animation" id="Animation_tw4ek"]
resource_name = "tutorial"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainScreen/TutorialDialogue/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.3, 9.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["Welcome, Player!", "Let's start things small. Start moving using A and D, or arrow key equivalents", "You can jump onto higher platforms with W or Up Arrow"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainScreen/TutorialDialogue/Label:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9, 1.4, 2.3, 4.8, 6.8, 9.3, 11.3, 12.8, 14.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0, 1.0, 1.0, 0.0, 1.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_owm72"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainScreen/TutorialDialogue/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["wewe"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainScreen/TutorialDialogue/Label:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_53gbw"]
_data = {
"RESET": SubResource("Animation_owm72"),
"tutorial": SubResource("Animation_tw4ek")
}

[node name="UIManager" type="CanvasLayer"]
script = ExtResource("1_aajpp")

[node name="MainScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerFrame" type="TextureRect" parent="MainScreen"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("2_ie8wj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MainScreen/PlayerFrame"]
position = Vector2(32, 32)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_0jo67")
autoplay = "default"

[node name="TimeElapsed" type="Label" parent="MainScreen"]
layout_mode = 0
offset_left = 928.0
offset_top = 8.0
offset_right = 974.0
offset_bottom = 63.0
text = "10"
label_settings = SubResource("LabelSettings_veqy4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerHealthOverlay" type="TextureRect" parent="MainScreen"]
layout_mode = 0
offset_left = 64.0
offset_right = 254.0
offset_bottom = 32.0
scale = Vector2(1.684, 2)
texture = ExtResource("4_pvg0f")
expand_mode = 1
stretch_mode = 1

[node name="PlayerHealth" type="TextureRect" parent="MainScreen"]
layout_mode = 0
offset_left = 64.0
offset_right = 254.0
offset_bottom = 32.0
scale = Vector2(1.684, 2)
texture = ExtResource("2_ajn7e")
expand_mode = 1
stretch_mode = 1

[node name="PlayerEnergy" type="ProgressBar" parent="MainScreen"]
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 320.0
offset_bottom = 128.0
value = 100.0
show_percentage = false

[node name="Quest" type="Control" parent="MainScreen"]
visible = false
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="ColorRect" type="ColorRect" parent="MainScreen/Quest"]
layout_mode = 0
offset_left = 1536.0
offset_top = 8.0
offset_right = 1912.0
offset_bottom = 200.0
color = Color(0.588235, 0.294118, 0, 0.396078)

[node name="Label" type="Label" parent="MainScreen/Quest"]
layout_mode = 0
offset_left = 1536.0
offset_top = 8.0
offset_right = 1912.0
offset_bottom = 200.0
text = "Quest: 
Collect Coins (10/10)"
label_settings = SubResource("LabelSettings_mp2y6")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TutorialDialogue" type="Control" parent="MainScreen"]
anchors_preset = 0
offset_left = 696.0
offset_top = 124.0
offset_right = 1208.0
offset_bottom = 196.0
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="MainScreen/TutorialDialogue"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 72.0
texture = SubResource("GradientTexture2D_800ft")

[node name="Label" type="Label" parent="MainScreen/TutorialDialogue"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 72.0
text = "wewe"
label_settings = SubResource("LabelSettings_6lrfc")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BG" type="ColorRect" parent="PauseMenu"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.784314)

[node name="Summary" type="Label" parent="PauseMenu"]
layout_mode = 0
offset_left = 712.0
offset_top = 216.0
offset_right = 1169.0
offset_bottom = 311.0
text = "Game Paused"
label_settings = SubResource("LabelSettings_fw5wo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="PauseMenu"]
layout_mode = 0
offset_left = 704.0
offset_top = 392.0
offset_right = 1161.0
offset_bottom = 487.0
text = "Game Paused"
label_settings = SubResource("LabelSettings_loj3b")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 768.0
offset_top = 576.0
offset_right = 1088.0
offset_bottom = 703.0
theme = SubResource("Theme_h57yl")
text = "Continue"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_53gbw")
}
autoplay = "tutorial"

[connection signal="pressed" from="PauseMenu/Continue" to="." method="_on_continue_pressed"]
